# sidescrolling_platformer

./: CMakeLists.txt  LICENSE  README.md  vcpkg.json
include/: COLLISION.HPP  GAME.HPP  PRIMITIVES.HPP
include/engine/: CAMERA.HPP  MESH.HPP  MODEL.HPP  NODE.HPP  PREDEF.HPP  SCENE.HPP  SHADER.HPP  SPRITE.HPP  TEXTURE.HPP  TRANSFORM.HPP  UTIL.HPP
include/glad/: glad.h
res/: simple.frag  simple.vert  sprite.vert
src/: COLLISION.CPP  GAME.CPP  MAIN.CPP  PRIMITIVES.CPP  glad.c
src/engine/: CAMERA.CPP  MESH.CPP  MODEL.CPP  NODE.CPP  SCENE.CPP  SHADER.CPP  SPRITE.CPP  TEXTURE.CPP  TRANSFORM.CPP  UTIL.CPP
